# CG

./: .gitignore
Engine/: CMakeLists.txt  main.cpp
Generator/: Generator.cpp  desktop.ini  generator  run.bat
Scene/: scene.xml
modelos/: box.3d  cone.3d  output_box.3d  output_cone.3d  output_plane.3d  output_sphere.3d  plane.3d  sphere.3d  teapot.3d
